# douban_comments_tracker

./: .gitignore  LICENSE  README.md  config.py  db.py  env_airflow.sh  pyproject.toml  update_cookie.py  utils.py
airflow_dags/: douban_comments_count_dag.py  douban_comments_scraper_dag.py  iqiyi_heat_dag.py
analysis/: generate_flourish_csv.py  jieba_words.py  rating_pie_animation.py  user_dict.txt
analysisLLM/: README.md  label_posts_with_llm.py
baidu/: .python-version  sugar_bos.py  upload_to_bos.py  upload_to_bos.sh
docs/: topic_taxonomy.md
flourish_outputs/: view_cumulative_top20_dramas_per_day.csv  view_iqiyi_tv_ranking.csv  view_zhaoxuelu_comments_rating_percentage_with_time.csv  view_zhaoxuelu_topics_groups_with_time.csv
google/: upload_drive.py
iqiyi/: heat_scraper.py  hot_search.py  tv_rank.py
kafka_docker/: docker-compose.yml
kafka_pipeline/: consumer_low_rating.py  producer_send_comments.py
multi_platform_scraper/: main.py  weibo_scraper.py
plot/: view_plot.py
scraper/: douban_comments_count.py  douban_comments_scraper.py  douban_drama_info.py  douban_group_members.py  douban_group_topics_scraper.py  douban_post_scraper.py  douban_topics_statistic_scraper.py  douban_user_ratings.py  insert_high_rating_dramas.py  insert_low_rating_users.py
scripts/: backup_tables.py  export_views.py  patch_batch_id.py  start_kafka.sh  stop_kafka.sh
sql/: create_coments_table_template.sql  create_comments_count_template.sql  query.sql
streamlit_console/: app.py
utils/: common.py  config.py  config_loader.py  html_tools.py  logger.py  runner.py
(+44 files in other folders)
