[project]
name = "zhaoxuelu-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "kafka-python>=2.3.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "streamlit>=1.54.0",
]
